clean up diagnostics reporting

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.6610,  0.4830])"
+       "tensor([0.1752, 0.6652])"
       ]
      },
      "execution_count": 16,
@@ -327,8 +327,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.6610,  0.4830],\n",
-       "        [-0.6610,  0.4830]])"
+       "tensor([[0.1752, 0.6652],\n",
+       "        [0.1752, 0.6652]])"
       ]
      },
      "execution_count": 18,
@@ -375,14 +375,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@nn_preconditioner(retrain_freq=2)\n",
+    "@nn_preconditioner(retrain_freq=2, debug=True)\n",
     "def MLGMRES(A, b, x0, e, nmax_iter):\n",
     "    return GMRES(A, b, x0, e, nmax_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,18 +403,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[array([-0.01366487, -0.00338068]),\n",
-       " array([2.07546078, 1.03289111]),\n",
+       "[array([3.1, 2.1]),\n",
+       " array([2.00470377, 1.35802513]),\n",
        " array([2.07142857, 1.02857143])]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,18 +433,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([-0.00827997, -0.02476859]),\n",
-       " array([2.12451802, 1.09159515]),\n",
+       "[array([ 0.05322905, -0.02685547]),\n",
+       " array([2.0834428 , 1.06121604]),\n",
        " array([2.11428571, 1.08571429])]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,18 +456,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[array([-0.00715022, -0.03624806]),\n",
-       " array([2.11100221, 1.10669727]),\n",
+       "[array([ 0.07086356, -0.0589591 ]),\n",
+       " array([2.05891578, 1.06870648]),\n",
        " array([2.1, 1.1])]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,18 +486,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.03842599, 0.02569747]),\n",
-       " array([1.54230312, 0.66111444]),\n",
+       "[array([-0.25875043,  0.1782496 ]),\n",
+       " array([1.6937071 , 0.77389663]),\n",
        " array([1.54285714, 0.65714286])]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,18 +509,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[array([-1.04435279,  0.65961134]),\n",
-       " array([1.00882955, 0.27467945]),\n",
+       "[array([-0.83989817,  0.00650585]),\n",
+       " array([0.79901647, 0.16150541]),\n",
        " array([ 0.4, -0.2])]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,18 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 0.03466947, -0.18008804]),\n",
-       " array([2.39832104, 0.79886488]),\n",
+       "[array([0.05113066, 0.94536948]),\n",
+       " array([2.22352521, 0.68748742]),\n",
        " array([2.4, 0.8])]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,18 +562,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[array([-0.00726552, -0.00399685]),\n",
-       " array([2.17139867, 1.12849978]),\n",
+       "[array([ 0.01221733, -0.01459694]),\n",
+       " array([2.16461796, 1.12353761]),\n",
        " array([2.17142857, 1.12857143])]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,18 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.03325148, 0.2628231 ]),\n",
-       " array([3.19255185, 1.90257204]),\n",
+       "[array([0.11730058, 0.36495113]),\n",
+       " array([3.11003818, 1.8577934 ]),\n",
        " array([3.25714286, 1.94285714])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,14 +615,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.00323792, 0.29251742]),\n",
+       " array([2.4984544 , 1.62849561]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b10 = np.array([4.2, 1.0])\n",
+    "MLGMRES(A, b10, x0, e, nmax_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.13401718, 0.49606419]),\n",
-       " array([2.36304477, 1.55077496]),\n",
+       "[array([-0.03835468,  0.03109765]),\n",
+       " array([2.56512207, 1.67413902]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b10 = np.array([4.2, 1.0])\n",
+    "MLGMRES(A, b10, x0, e, nmax_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retraining\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([-0.03835468,  0.03109765]),\n",
+       " array([2.56512207, 1.67413902]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
@@ -616,9 +704,7 @@
     {
      "data": {
       "text/plain": [
-       "[array([0.05731399, 0.15517521]),\n",
-       " array([2.47458082, 1.61858252]),\n",
-       " array([2.54285714, 1.65714286])]"
+       "12"
       ]
      },
      "execution_count": 34,
@@ -627,39 +713,8 @@
     }
    ],
    "source": [
-    "b10 = np.array([4.2, 1.0])\n",
-    "MLGMRES(A, b10, x0, e, nmax_iter)"
+    "MLGMRES.predictor.counter"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([0.05731399, 0.15517521]),\n",
-       " array([2.47458082, 1.61858252]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b10 = np.array([4.2, 1.0])\n",
-    "MLGMRES(A, b10, x0, e, nmax_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
