moved source files and added logging

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gmres         import GMRES, matmul_a, mat_to_a\n",
-    "from nn_collection import TwoLayerNet\n",
-    "from nn_predictor  import nn_preconditioner"
+    "from src_dir.gmres         import GMRES, matmul_a, mat_to_a\n",
+    "from src_dir.nn_collection import TwoLayerNet\n",
+    "from src_dir.nn_predictor  import nn_preconditioner"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -69,11 +69,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
+     "name": "stdout",
+     "text": "Populating the interactive namespace from numpy and matplotlib\n"
     }
    ],
    "source": [
@@ -89,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "inputHidden": false,
@@ -200,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,18 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([3, 2])"
-      ]
+      "text/plain": "array([3, 2])"
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 69
     }
    ],
    "source": [
@@ -243,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,18 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
-      ]
+      "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 72
     }
    ],
    "source": [
@@ -282,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,77 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "tensor([0.1752, 0.6652])"
-      ]
+      "text/plain": "tensor([], size=(0, 2))"
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y[0, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = torch.cat((x, y), 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.1752, 0.6652],\n",
-       "        [0.1752, 0.6652]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cat((z, y), 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = GMRES(A, b, x0, e, nmax_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 74
     }
    ],
    "source": [
@@ -371,7 +304,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([-1.0972, -0.5366])"
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
+   "source": [
+    "y[0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[-1.0972, -0.5366]])"
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "source": [
+    "z = torch.cat((x, y), 0)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[-1.0972, -0.5366],\n        [-1.0972, -0.5366]])"
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "source": [
+    "torch.cat((z, y), 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = GMRES(A, b, x0, e, nmax_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,18 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
-      ]
+      "text/plain": "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 81
     }
    ],
    "source": [
@@ -403,27 +416,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([3.1, 2.1]),\n",
-       " array([2.00470377, 1.35802513]),\n",
-       " array([2.07142857, 1.02857143])]"
-      ]
+      "text/plain": "[array([3.1, 2.1]),\n array([2.00470377, 1.35802513]),\n array([2.07142857, 1.02857143])]"
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 82
     }
    ],
    "source": [
@@ -433,20 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([ 0.05322905, -0.02685547]),\n",
-       " array([2.0834428 , 1.06121604]),\n",
-       " array([2.11428571, 1.08571429])]"
-      ]
+      "text/plain": "[array([0.03048832, 0.10636806]),\n array([2.07433118, 1.0622452 ]),\n array([2.11428571, 1.08571429])]"
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 83
     }
    ],
    "source": [
@@ -456,27 +459,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([ 0.07086356, -0.0589591 ]),\n",
-       " array([2.05891578, 1.06870648]),\n",
-       " array([2.1, 1.1])]"
-      ]
+      "text/plain": "[array([0.03511662, 0.14372292]),\n array([2.05088798, 1.07063828]),\n array([2.1, 1.1])]"
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 84
     }
    ],
    "source": [
@@ -486,20 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([-0.25875043,  0.1782496 ]),\n",
-       " array([1.6937071 , 0.77389663]),\n",
-       " array([1.54285714, 0.65714286])]"
-      ]
+      "text/plain": "[array([-0.1559162 , -0.38095117]),\n array([1.72176772, 0.75602093]),\n array([1.54285714, 0.65714286])]"
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 85
     }
    ],
    "source": [
@@ -509,27 +502,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([-0.83989817,  0.00650585]),\n",
-       " array([0.79901647, 0.16150541]),\n",
-       " array([ 0.4, -0.2])]"
-      ]
+      "text/plain": "[array([-0.8558148 ,  0.71955097]),\n array([0.8958915, 0.1773815]),\n array([ 0.4, -0.2])]"
      },
-     "execution_count": 27,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 86
     }
    ],
    "source": [
@@ -539,20 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([0.05113066, 0.94536948]),\n",
-       " array([2.22352521, 0.68748742]),\n",
-       " array([2.4, 0.8])]"
-      ]
+      "text/plain": "[array([ 0.29637308, -0.72807264]),\n array([2.27602299, 0.71300684]),\n array([2.4, 0.8])]"
      },
-     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 87
     }
    ],
    "source": [
@@ -562,27 +545,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([ 0.01221733, -0.01459694]),\n",
-       " array([2.16461796, 1.12353761]),\n",
-       " array([2.17142857, 1.12857143])]"
-      ]
+      "text/plain": "[array([-0.02402194,  0.16289425]),\n array([2.16724772, 1.12577074]),\n array([2.17142857, 1.12857143])]"
      },
-     "execution_count": 29,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 88
     }
    ],
    "source": [
@@ -592,20 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([0.11730058, 0.36495113]),\n",
-       " array([3.11003818, 1.8577934 ]),\n",
-       " array([3.25714286, 1.94285714])]"
-      ]
+      "text/plain": "[array([-0.03171067,  0.37698913]),\n array([3.22866338, 1.92404404]),\n array([3.25714286, 1.94285714])]"
      },
-     "execution_count": 30,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 89
     }
    ],
    "source": [
@@ -615,27 +588,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([0.00323792, 0.29251742]),\n",
-       " array([2.4984544 , 1.62849561]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
+      "text/plain": "[array([-0.04920762, -0.17728877]),\n array([2.60816887, 1.695657  ]),\n array([2.54285714, 1.65714286])]"
      },
-     "execution_count": 31,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 90
     }
    ],
    "source": [
@@ -645,20 +612,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([-0.03835468,  0.03109765]),\n",
-       " array([2.56512207, 1.67413902]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
+      "text/plain": "[array([ 0.00070102, -0.26077914]),\n array([2.57954591, 1.68089934]),\n array([2.54285714, 1.65714286])]"
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 91
     }
    ],
    "source": [
@@ -668,27 +631,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "retraining\n"
-     ]
+     "name": "stdout",
+     "text": "retraining\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[array([-0.03835468,  0.03109765]),\n",
-       " array([2.56512207, 1.67413902]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
+      "text/plain": "[array([ 0.00070102, -0.26077914]),\n array([2.57954591, 1.68089934]),\n array([2.54285714, 1.65714286])]"
      },
-     "execution_count": 33,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 92
     }
    ],
    "source": [
@@ -698,18 +655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "12"
-      ]
+      "text/plain": "12"
      },
-     "execution_count": 34,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 93
     }
    ],
    "source": [
@@ -774,15 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "t=  9900, loss=0.05285: 100%|██████████| 10000/10000 [00:04<00:00, 2477.12it/s]\n"
-     ]
+     "name": "stdout",
+     "text": "t=  9900, loss=0.03224: 100%|██████████| 10000/10000 [00:04<00:00, 2374.68it/s]\n"
     }
    ],
    "source": [
@@ -828,58 +781,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "tensor([ 0.5003, -7.7463], grad_fn=<AddBackward0>)"
-      ]
+      "text/plain": "matrix([[-0.72728243,  2.57684015]])"
      },
-     "execution_count": 91,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 95
     }
    ],
    "source": [
-    "model.forward(x[1,:])"
+    "np.dot(A,x[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "tensor([ 0.5044, -7.7441])"
-      ]
+      "text/plain": "tensor([-0.7287,  2.5746], grad_fn=<AddBackward0>)"
      },
-     "execution_count": 92,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 96
     }
    ],
    "source": [
-    "y[1,:]"
+    "model.forward(x[0,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "tensor([-1.5171, -0.9901])"
-      ]
+      "text/plain": "tensor([-0.7273,  2.5768])"
      },
-     "execution_count": 120,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 97
+    }
+   ],
+   "source": [
+    "y[0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([-0.0475, -0.6798])"
+     },
+     "metadata": {},
+     "execution_count": 98
     }
    ],
    "source": [
@@ -938,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
